--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -11,4 +11,11 @@ html, body, #root {
   position:static;
   width:100vw;
   height:100vh;
+  overflow:hidden;
+}
+#app, canvas {
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
