--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -19,3 +19,26 @@ html, body, #root {
     max-width: 100vw;
     max-height: 100vh;
 }
+.login-input {
+  font-size: 16px; /* important */
+  outline: none;
+  border: none;
+  width: 100%;
+}
+/* Prevent user zoom */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  touch-action: manipulation;
+}
+
+/* Critical: Disable browser zoom on mobile input focus */
+input,
+select,
+textarea {
+  font-size: 16px !important; /* mobile browsers won't zoom if >= 16px */
+}
