--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,9 +4,10 @@
 @import "./bunny.css";
 @import "./typora.css";
 
-/*try*/
+/*
 #dock-networx > img,
 #root > div > div.spotlight > div:nth-child(2) > div.flex-1.vstack > div.w-4\/5.h-56 > img,
 #spotlight-networx > div.w-8.flex-center > img{
   border-radius:.7rem;
 }
+*/
