gixtry jump txt

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,7 @@
   border-radius:.7rem;
 }
 */
+input, textarea, select {
+  font-size: 16px; /* prevents mobile zoom on focus */
+  -webkit-text-size-adjust: 100%;
+}
